# hyper-efficient-rl

./: .gitignore  README.md  data_loader.py  evaluate.py  finetune_qwen.py  inference.py  main.py  pyproject.toml  requirements.txt  setup.py  simple_baseline_test.py  test_baseline_eval.py  test_config.py  test_data_pipeline.py  test_sft_basic.py  test_sft_setup.py
config/: base_config.yaml  rl_config.yaml  sft_config.yaml
data/cache/ChilleD___svamp/default/0.0.0/5e0bf1e5e7c0e9c4bc39180d224f41f3f801b7ef/: cache-671ad533f60f7d9e.arrow  cache-c9c0bcd440a0687c.arrow  dataset_info.json  svamp-test.arrow  svamp-train.arrow
data/cache/gsm8k/main/0.0.0/e53f048856ff4f594e959d75785d2c2d37b678ee/: cache-764155c4319c7774.arrow  cache-aed4a50c298f9f91.arrow
scripts/: baseline_eval.py  evaluate.py  prepare_data.py  train_rl.py  train_sft.py
src/: __init__.py
src/data/: __init__.py  dataset_loader.py  preprocessing.py
src/evaluation/: __init__.py  evaluator.py  metrics.py
src/training/: __init__.py  rl_trainer.py  sft_trainer.py
src/utils/: __init__.py  config.py  helpers.py  logging.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothIterativeSFTTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
