[project]
name = "hyper-efficient-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=3.6.0",
    "peft>=0.17.1",
    "transformers>=4.55.4",
    "trl>=0.22.2",
    "unsloth>=2025.9.6",
    "unsloth-zoo>=2025.9.7",
    "xformers>=0.0.32.post2",
]
